monticore-generator/src/test/resources/cocos/invalid/A4033/a4033.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4033;

grammar a4033 {
  a = "a";

}
